--- a/templates/topic_alt.html
+++ b/templates/topic_alt.html
@@ -6,30 +6,29 @@
 {{if ne .LastPage .Page}}<link rel="prerender next" href="{{.Topic.Link}}?page={{add .Page 1}}" />
 <div id="nextFloat" class="next_button"><a class="next_link" aria-label="{{lang "paginator.next_page_aria"}}" rel="next" href="{{.Topic.Link}}?page={{add .Page 1}}">{{lang "paginator.greater_than"}}</a></div>{{end}}
 
+<main id="topicPage">
+
 <link rel="canonical" href="//{{.Site.URL}}{{.Topic.Link}}{{if gt .Page 1}}?page={{.Page}}{{end}}" />
 
-<main>
-
 <div {{scope "topic_title_block"}} class="rowblock rowhead topic_block" aria-label="{{lang "topic.opening_post_aria"}}">
-	<form action='/topic/edit/submit/{{.Topic.ID}}?session={{.CurrentUser.Session}}' method="post">
-		<div class="rowitem topic_item{{if .Topic.Sticky}} topic_sticky_head{{else if .Topic.IsClosed}} topic_closed_head{{end}}">
-			<h1 class='topic_name hide_on_edit' title='{{.Topic.Title}}'>{{.Topic.Title}}</h1>
-			<span class="topic_name_forum_sep hide_on_edit"> - </span>
-			<a href="{{.Forum.Link}}" class="topic_forum hide_on_edit">{{.Forum.Name}}</a>
-			{{/** TODO: Does this need to be guarded by a permission? It's only visible in edit mode anyway, which can't be triggered, if they don't have the permission **/}}
-			{{if .CurrentUser.Loggedin}}
-			{{if not .Topic.IsClosed or .CurrentUser.Perms.CloseTopic}}
-			{{if .CurrentUser.Perms.EditTopic}}
-			<input class='show_on_edit topic_name_input' name="topic_name" value='{{.Topic.Title}}' type="text" aria-label="{{lang "topic.title_input_aria"}}" />
-			<button name="topic-button" class="formbutton show_on_edit submit_edit">{{lang "topic.update_button"}}</button>
-			{{end}}
-			{{end}}
-			{{end}}
-			<span class="topic_view_count hide_on_edit">{{.Topic.ViewCount}}</span>
-			{{/** TODO: Inline this CSS **/}}
-			{{if .Topic.IsClosed}}<span class='username hide_on_micro topic_status_e topic_status_closed hide_on_edit' title='{{lang "status.closed_tooltip"}}' aria-label='{{lang "topic.status_closed_aria"}}' style="font-weight:normal;float: right;position:relative;top:-5px;">&#x1F512;&#xFE0E</span>{{end}}
-		</div>
-	</form>
+	<div class="rowitem topic_item{{if .Topic.Sticky}} topic_sticky_head{{else if .Topic.IsClosed}} topic_closed_head{{end}}">
+		<h1 class='topic_name hide_on_edit' title='{{.Topic.Title}}'>{{.Topic.Title}}</h1>
+		<span class="topic_name_forum_sep hide_on_edit"> - </span>
+		<a href="{{.Forum.Link}}" class="topic_forum hide_on_edit">{{.Forum.Name}}</a>
+		{{/** TODO: Does this need to be guarded by a permission? It's only visible in edit mode anyway, which can't be triggered, if they don't have the permission **/}}
+		{{if .CurrentUser.Loggedin}}
+		{{if not .Topic.IsClosed or .CurrentUser.Perms.CloseTopic}}
+		{{if .CurrentUser.Perms.EditTopic}}
+		<form id="edit_topic_form" action='/topic/edit/submit/{{.Topic.ID}}?session={{.CurrentUser.Session}}' method="post"></form>
+		<input form="edit_topic_form" class='show_on_edit topic_name_input' name="topic_name" value='{{.Topic.Title}}' type="text" aria-label="{{lang "topic.title_input_aria"}}" />
+		<button form="edit_topic_form" name="topic-button" class="formbutton show_on_edit submit_edit">{{lang "topic.update_button"}}</button>
+		{{end}}
+		{{end}}
+		{{end}}
+		<span class="topic_view_count hide_on_edit">{{.Topic.ViewCount}}</span>
+		{{/** TODO: Inline this CSS **/}}
+		{{if .Topic.IsClosed}}<span class='username hide_on_micro topic_status_e topic_status_closed hide_on_edit' title='{{lang "status.closed_tooltip"}}' aria-label='{{lang "topic.status_closed_aria"}}' style="font-weight:normal;float: right;position:relative;top:-5px;">&#x1F512;&#xFE0E</span>{{end}}
+	</div>
 </div>
 
 <div class="rowblock post_container">
@@ -56,7 +55,9 @@
 			</div>
 		</div>
 		<div id="poll_results_{{.Poll.ID}}" class="content_container poll_results auto_hide">
-			<div class="topic_content user_content"></div>
+			<div class="topic_content user_content">
+				<div class="auto_hide poll_no_results">{{lang "topic.poll_no_results"}}</div>
+			</div>
 		</div>
 	</article>
 	{{end}}
