--- a/templates/topic_alt_posts.html
+++ b/templates/topic_alt_posts.html
@@ -11,20 +11,20 @@
 
 		{{if $.CurrentUser.Perms.EditReply}}
 		{{if .Attachments}}<div class="show_on_edit show_on_block_edit attach_edit_bay" type="reply" id="{{.ID}}">
-				{{range .Attachments}}
-				<div class="attach_item{{if .Image}} attach_image_holder{{end}}">
-					{{if .Image}}<img src="//{{$.Header.Site.URL}}/attachs/{{.Path}}?sectionID={{.SectionID}}&amp;sectionType=forums" height=24 width=24 />{{end}}
-					<span class="attach_item_path" aid="{{.ID}}" fullPath="//{{$.Header.Site.URL}}/attachs/{{.Path}}">{{.Path}}</span>
-					<button class="attach_item_select">{{lang "topic.select_button_text"}}</button>
-					<button class="attach_item_copy">{{lang "topic.copy_button_text"}}</button>
-				</div>
-				{{end}}
-				<div class="attach_item attach_item_buttons">
-					{{if $.CurrentUser.Perms.UploadFiles}}
-					<input name="upload_files" class="upload_files_post" id="upload_files_post_{{.ID}}" multiple type="file" style="display: none;" />
-					<label for="upload_files_post_{{.ID}}" class="formbutton add_file_button">{{lang "topic.upload_button_text"}}</label>{{end}}
-					<button class="attach_item_delete">{{lang "topic.delete_button_text"}}</button>
-				</div>
+			{{range .Attachments}}
+			<div class="attach_item{{if .Image}} attach_image_holder{{end}}">
+				{{if .Image}}<img src="//{{$.Header.Site.URL}}/attachs/{{.Path}}?sectionID={{.SectionID}}&amp;sectionType=forums" height=24 width=24 />{{end}}
+				<span class="attach_item_path" aid="{{.ID}}" fullPath="//{{$.Header.Site.URL}}/attachs/{{.Path}}">{{.Path}}</span>
+				<button class="attach_item_select">{{lang "topic.select_button_text"}}</button>
+				<button class="attach_item_copy">{{lang "topic.copy_button_text"}}</button>
+			</div>
+			{{end}}
+			<div class="attach_item attach_item_buttons">
+				{{if $.CurrentUser.Perms.UploadFiles}}
+				<input name="upload_files" class="upload_files_post auto_hide" id="upload_files_post_{{.ID}}" multiple type="file" />
+				<label for="upload_files_post_{{.ID}}" class="formbutton add_file_button">{{lang "topic.upload_button_text"}}</label>{{end}}
+				<button class="attach_item_delete">{{lang "topic.delete_button_text"}}</button>
+			</div>
 		</div>{{end}}
 		{{end}}{{end}}
 
