Mover rows are more obvious links on Nox. Mover rows are now bolded when selected on Nox.
Fixed a bug where moves would get submitted multiple times.

--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -300,6 +300,10 @@ h1, h2, h3, h4, h5 {
 }
 .pane_row {
 	margin-top: 2px;
+	cursor: pointer;
+}
+.pane_selected {
+	font-weight: bold;
 }
 .pane_buttons {
 	margin-top: 8px;
