Fixed a bug where hitting delete on one post would affect selected attachments on other posts. Fixed a bug where attachments couldn't be deleted after being added with the attachment manager without refreshing. Fixed a bug where an attachment can't be reuploaded with the attachment manager after being uploaded and deleted without refreshing. Improved the error message for RemoveAttachFromReplySubmit when there aren't any aids.
The delete button is now hidden when there aren't any attachments to delete.

--- a/templates/topic_alt.html
+++ b/templates/topic_alt.html
@@ -61,7 +61,7 @@
 		</div>
 	</article>
 	{{end}}
-	<article {{scope "opening_post"}} itemscope itemtype="http://schema.org/CreativeWork" class="rowitem passive deletable_block editable_parent post_item top_post" aria-label="{{lang "topic.opening_post_aria"}}">
+	<article {{scope "opening_post"}} itemscope itemtype="http://schema.org/CreativeWork" class="rowitem passive deletable_block editable_parent post_item top_post{{if .Topic.Attachments}} has_attachs{{end}}" aria-label="{{lang "topic.opening_post_aria"}}">
 		{{template "topic_alt_userinfo.html" .Topic }}
 		<div class="content_container">
 			<div class="hide_on_edit topic_content user_content" itemprop="text">{{.Topic.ContentHTML}}</div>
@@ -70,7 +70,7 @@
 			{{if .CurrentUser.Perms.EditTopic}}
 			<div class="show_on_edit attach_edit_bay" type="topic" id="{{.Topic.ID}}">
 				{{range .Topic.Attachments}}
-				<div class="attach_item{{if .Image}} attach_image_holder{{end}}">
+				<div class="attach_item attach_item_item{{if .Image}} attach_image_holder{{end}}">
 					{{if .Image}}<img src="//{{$.Header.Site.URL}}/attachs/{{.Path}}?sectionID={{.SectionID}}&amp;sectionType=forums" height=24 width=24 />{{end}}
 					<span class="attach_item_path" aid="{{.ID}}" fullPath="//{{$.Header.Site.URL}}/attachs/{{.Path}}">{{.Path}}</span>
 					<button class="attach_item_select">{{lang "topic.select_button_text"}}</button>
