Fixed a bug where users couldn't post non-image attachments. Fixed a visual padding bug for .uploadItem on Nox. #upload_files now uses .auto_hide instead of an inline style.

--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -418,6 +418,9 @@ h2 {
 	height: 100px;
 	resize: vertical;
 }
+.uploadItem {
+	display: inline-block;
+}
 
 .more_topic_block_initial {
 	display: none;
