--- a/templates/topics_quick_topic.html
+++ b/templates/topics_quick_topic.html
@@ -18,7 +18,7 @@
 				<button form="quick_post_form" class="formbutton">{{lang "quick_topic.create_topic_button"}}</button>
 				<button form="quick_post_form" class="formbutton" id="add_poll_button">{{lang "quick_topic.add_poll_button"}}</button>
 				{{if .CurrentUser.Perms.UploadFiles}}
-				<input name="upload_files" form="quick_post_form" id="upload_files" multiple type="file" style="display: none;" />
+				<input name="upload_files" form="quick_post_form" id="upload_files" multiple type="file" class="auto_hide" />
 				<label for="upload_files" class="formbutton add_file_button">{{lang "quick_topic.add_file_button"}}</label>
 				<div id="upload_file_dock"></div>{{end}}
 				<button class="formbutton close_form">{{lang "quick_topic.cancel_button"}}</button>
