--- a/themes/shadow/public/panel.css
+++ b/themes/shadow/public/panel.css
@@ -20,6 +20,9 @@
 	margin-left: 2px;
 }
 
+.analytics .colstack_head:first-child {
+	padding-bottom: 4px;
+}
 .timeRangeSelector {
 	padding: 2px;
 	margin-top: -3px;
