A notice is now shown when the menu is updated. Re-added the missing padding above notices in the Control Panel for Nox. Moved the inline menu item JS to it's own JS file.
Added the panel.themes_menus_items_order_updated phrase.

--- a/themes/nox/public/panel.css
+++ b/themes/nox/public/panel.css
@@ -92,6 +92,9 @@
 .colstack_head + .colstack_head.colstack_sub_head:not(:first-child) {
 	margin-top: 2px;
 }
+.alert {
+	margin-top: 18px;
+}
 .rowitem {
 	display: flex;
 }
