Panel Dashboard now uses dyntmpl to make it a little bit faster. Fixed a bug in the dashboard where report stats were being fetched by day rather than by week. Reduced the amount of boilerplate in the dashboard with the GE type alias. Tweaked the colour of hguides on Cosora.
Added the panel template.

Added the panel_dashboard_cpu_desc phrase.
Added the panel_dashboard_ram_desc phrase.
Added the panel_dashboard_online_desc phrase.
Added the panel_dashboard_guests_online_desc phrase.
Added the panel_dashboard_users_online_desc phrase.
Added the panel_dashboard_coming_soon phrase.

--- a/themes/cosora/public/panel.css
+++ b/themes/cosora/public/panel.css
@@ -67,6 +67,7 @@
 }
 .colstack_right .colstack_head h1 + h2.hguide {
 	margin-left: auto;
+	color: var(--extra-lightened-primary-text-color);
 }
 .footer {
 	margin-top: 0px;
