--- a/templates/panel_dashboard.html
+++ b/templates/panel_dashboard.html
@@ -1,17 +1,9 @@
-{{template "header.html" . }}
-<div class="colstack panel_stack">
-{{template "panel_menu.html" . }}
-	<main id="panel_dashboard_right" class="colstack_right">
-{{template "panel_before_head.html" . }}
 		<div class="colstack_item colstack_head">
 			<div class="rowitem"><h1>{{lang "panel_dashboard_head"}}</h1></div>
 		</div>
 		<div id="panel_dashboard" class="colstack_grid">
-{{range .GridItems}}
+{{range .}}
 			<div id="{{.ID}}" class="grid_item {{.Class}}" title="{{.Note}}" style="{{if .TextColour}}color: {{.TextColour}};{{end}}
 		{{if .Background}}background-color: {{.Background}};{{end}}"><span>{{.Body}}</span></div>
 {{end}}
 		</div>
-	</main>
-</div>
-{{template "footer.html" . }}
