--- a/templates/panel.html
+++ b/templates/panel.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 <div class="colstack panel_stack">
 {{template "panel_menu.html" . }}
-<main id="{{.HTMLID}}" class="colstack_right">
+<main id="{{.HTMLID}}" class="colstack_right {{.ClassNames}}">
 {{template "panel_before_head.html" . }}
 {{dyntmpl .TmplName .Inner .Header}}
 </main>
