Use <h1> instead of <a> in more spots in the control panel. Eliminate more instances of excessive indentation in the analytics panes.

--- a/templates/panel_forum_edit.html
+++ b/templates/panel_forum_edit.html
@@ -38,7 +38,9 @@
 		</form>
 	</div>
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><a>{{lang "panel_forum_permissions_head"}}</a></div>
+		<div class="rowitem">
+			<h1>{{lang "panel_forum_permissions_head"}}</h1>
+		</div>
 	</div>
 	<div id="forum_quick_perms" class="colstack_item rowlist formlist the_form">
 		{{range .Groups}}
